name:              sharing-is-caring
version:           0.0.0
license:           AGPL
license-file:      LICENSE
author:            Astro
maintainer:        Astro
synopsis:          Simple file sharing on the Web
description:       Upload & download files webapp
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

library
    exposed-modules: Application
                   , Upload
                   , Storage
                   , Tokens

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                TupleSections

    build-depends: base                          >= 4
                 , yesod                         >= 1.2 && < 1.3
                 , hamlet                        >= 1.1
                 , wai                           >= 1.3
                 , wai-extra                     >= 1.3
                 , conduit                       >= 0.5
                 , text                          >= 0.11.2.0
                 , attoparsec-conduit            >= 0.5
                 , http-types                    >= 0.7.1
                 , bytestring                    >= 0.9.2.1
                 , attoparsec                    >= 0.10.2.0
                 , transformers                  >= 0.3.0.0
                 , case-insensitive              >= 0.4.0.1
                 , containers                    >= 0.4.2.1
                 , unordered-containers          >= 0.2.1.0
                 , aeson                         >= 0.6.0.2
                 , stm                           >= 2.3
                 , time                          >= 1.4
                 , random                        >= 1.0.1.1
                 , hashable                      >= 1.1.2.3
                 , yesod-static                  >= 1.1
                 , directory                     >= 1.1
                 , mtl                           >= 2.1
                 , resourcet
                 , ekg                           >= 0.3.1.2

executable         sharing
    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , sharing-is-caring
                     , warp                      >= 1.3
                     , network-conduit           >= 0.5
